<resources>
    <string name="app_name">FindTeam</string>
    <string name="frag_my_projs">My Projects</string>
    <string name="frag_find_projs">Find Projects</string>
    <string name="frag_profile">Profile</string>
    <string name="frag_find_mems">Find Members</string>
    <string name="frag_chat">Chat</string>
    <string name="activity_create_project">Create Project</string>
    <string name="activity_detail_project">Project\u0027s Detail</string>

    <string name="Rs">\u20B9</string>
    <string name="filled_bullet">\u25CF</string>
    <string name="linear_bullet">\u25CB</string>
    <string name="rect_bullet">\u25A0</string>
    <string name="blank_rect">\u25A1</string>
    <string name="true_tick">\u2713</string>
    <string name="star">\u2605</string>

    <!-- LOGIN PAGE TEXT -->
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="forgot_pass">Forgot Password?</string>

    <!-- REGISTER PAGE TEXT -->
    <string name="register_acct">Sign Up</string>
    <string name="first_name">First Name:</string>
    <string name="middle_name">Middle Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email_add">Email Address:</string>
    <string name="pass_lower">Password:</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="middle_name_hint">Enter middle name</string>
    <string name="last_name_hint">Enter last name</string>

    <!-- FORGOT PAGE TEXT -->
    <string name="forgot_pass_title">Forgot Password</string>
    <string name="forgot_pass_msg">Please enter your email address \n and we\'ll reset your password\:</string>
    <string name="reset">Reset</string>

    <!-- SECURITY CODE TEXT -->
    <string name="enter_the_security_code_sent_to">Enter the security code sent to:</string>
    <string name="confirm">Confirm</string>
    <string name="enter_security_code">Enter Security Code</string>

    <!-- NEW PASS TEXT -->
    <string name="please_type_new_password">Please type new password:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_new_password">Re-enter new password:</string>
    <string name="please_confirm_password">Please Confirm Password:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_n_updated">Password\nUpdated</string>
    <string name="your_password_has_been_updated">Your password has been updated!</string>
    <string name="email_sent">Email Sent!</string>
    <string name="email_has_been_sent_to">Email has been sent to:</string>
    <string name="please_check_your_inbox_to_reset_your_password">Please check your inbox to reset your password.</string>
    <string name="send_message">Send a message…</string>

    <string-array name="progress">
        <item>Awaiting</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
    <string name="firstname_lastname">%1$s %2$s</string>
    <string name="firstname_middlename_lastname">%1$s %2$s %3$s</string>
    <string name="sign_up_here">Don\'t have an account yet? Sign up here.</string>
</resources>