<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_margin="15dp"
    android:background="@drawable/fragment_bg"
    android:elevation="10dp"
    android:padding="30dp"
    tools:context=".fragments.FragForgotSecurityCode">

    <TextView
        android:id="@+id/security_code_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/questrial"
        android:text="@string/enter_the_security_code_sent_to"
        android:textAlignment="center"
        android:textColor="#373737"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/securityCode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autofillHints="Security Code"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/questrial"
        android:hint="@string/enter_security_code"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_code_msg" />

    <Button
        android:id="@+id/securityCodeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_shadow_button"
        android:text="@string/confirm"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/securityCode" />


</androidx.constraintlayout.widget.ConstraintLayout>