<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/fragment_bg"
    android:layout_height="match_parent"
    tools:context=".fragments.FragResetSuccess">

    <TextView
        android:id="@+id/successMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/password_n_updated"
        android:textAlignment="center"
        android:textColor="#434141"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/successMsg2"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="@string/your_password_has_been_updated"
        android:textAlignment="center"
        android:textColor="#373737"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_success_icon" />

    <Button
        android:id="@+id/successBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shadow_button"
        android:textColor="#ffffff"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successMsg2" />

    <ImageView
        android:id="@+id/password_success_icon"
        android:layout_width="171dp"
        android:layout_height="224dp"
        android:layout_marginTop="8dp"
        android:alpha="0.8"
        android:src="@drawable/password_updated_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successMsg"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>